Update date & meme fix

--- a/Memes.html
+++ b/Memes.html
@@ -22,9 +22,8 @@
 <main>
     <article>
         <figure>
-        <img align="left" src="https://scontent-bru2-1.xx.fbcdn.net/v/t1.15752-9/44672317_2132370073758797_191553849184485376_n.png?
-        _nc_cat=110&_nc_ht=scontent-bru2-1.xx&oh=aa1e8403b2635b3be72faffc96cbd72d&oe=5C50DFDC"
-             title="Meme" alt="Meme"/>
+        <img align="left" src="https://ahseeit.com//king-include/uploads/2019/01/49848972_526259147860170_6911118235095111617_n-79417014.jpg" 
+        title="Meme" alt="Meme"/>
             <figcaption>Inzender: Piet</figcaption>
         </figure>
         <h4>Vertaling:</h4>
@@ -34,7 +33,7 @@
     <footer>
         <p>Aangestelde rechter: Klets</p>
         <p>Advocaten: Roel & Piet</p>
-        <p>Copyright @KeiSpiessens. Legimentatie van het strafwettelijk rechtboek 2018.</p>
+        <p>Copyright @KeiSpiessens. Legimentatie van het strafwettelijk rechtboek 2018 - 2020.</p>
     </footer>
 </main>
 </body>
