--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
     <footer>
         <p>Aangestelde rechter: Klets</p>
         <p>Advocaten: Roel & Piet</p>
-        <p>Copyright @KeiSpiessens. Legimentatie van het strafwettelijk rechtboek 2018.</p>
+        <p>Copyright @KeiSpiessens. Legimentatie van het strafwettelijk rechtboek 2018 - 2020.</p>
     </footer>
 </main>
-
 </body>
 </html>
