--- a/Woordenboek.html
+++ b/Woordenboek.html
@@ -120,7 +120,7 @@
     <footer>
         <p>Aangestelde rechter: Klets</p>
         <p>Advocaten: Roel & Piet</p>
-        <p>Copyright @KeiSpiessens. Legimentatie van het strafwettelijk rechtboek 2018.</p>
+        <p>Copyright @KeiSpiessens. Legimentatie van het strafwettelijk rechtboek 2018 - 2020.</p>
     </footer>
 </main>
 
