--- a/Woordenboekp2.html
+++ b/Woordenboekp2.html
@@ -119,7 +119,7 @@
     <footer>
         <p>Aangestelde rechter: Klets</p>
         <p>Advocaten: Roel & Piet</p>
-        <p>Copyright @KeiSpiessens. Legimentatie van het strafwettelijk rechtboek 2018.</p>
+        <p>Copyright @KeiSpiessens. Legimentatie van het strafwettelijk rechtboek 2018 - 2020.</p>
     </footer>
 </main>
 </body>
